--- a/package.json
+++ b/package.json
@@ -1,21 +1,33 @@
-{
-  "name": "bot",
-  "version": "0.0.1",
-  "description": "Test bot",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Predrag Stošić",
-  "license": "ISC",
+"name": "discord.js-heroku",
+  "version": "1.0.0",
+  "description": "Discord.js bot on Heroku",
+  "main": "bot.js",
   "dependencies": {
-    "axios": "^0.18.0",
-    "discord.js": "^11.3.2",
+    "common-tags": "^1.8.0",
+    "discord.js": "^11.4.2",
+    "ffmpeg": "^0.0.4",
+    "ffmpeg-binaries": "^4.0.0",
     "get-youtube-id": "^1.0.0",
+    "gif-search": "^2.0.1",
+    "google-translate-api": "^2.3.0",
+    "math-expression-evaluator": "^1.2.17",
+    "node": "8.x",
+    "node-gyp": "^3.7.0",
     "opusscript": "0.0.6",
-    "request": "^2.85.0",
+    "queue": "^4.4.2",
+    "rebuild": "^0.1.2",
+    "request": "^2.88.0",
     "simple-youtube-api": "^5.0.2",
     "youtube-info": "^1.2.0",
-    "ytdl-core": "^0.20.2"
-  }
-}
+    "ytdl-core": "^0.21.1"
+  },
+  "keywords": [
+    "heroku",
+    "discord.js"
+  ],
+  "author": "",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/synicalsyntax/discord.js-heroku/issues"
+  },
+  "homepage": "https://github.com/synicalsyntax/discord.js-heroku#readme"
